# pdf-word-counter

./: .README.md.swp  LICENSE  README.md  pyproject.toml
.github/workflows/: pdf-word-counter-python-publish.yml
pdf_word_counter/: __init__.py  __main__.py  cli.py  output.py  pdf_utils.py  search.py  utils.py  version.py
